<resources>
    <string name="app_name">VTS</string>
    <string name="ComInfor_CompanyName">Viettas SaiGon JSC.</string>
    <string name="ComInfor_CompanyFullName">Công Ty Cổ Phần Giải Pháp Thương Mại\nViệt Nam Sài Gòn</string>
    <string name="ComInfor_CompanyFullName2">Công Ty Cổ Phần Giải Pháp Thương Mại Việt Nam Sài Gòn</string>
    <string name="ComInfor_Address">351/9 Nơ Trang Long, P. Bình Lợi Trung, Tp.HCM</string>
    <string name="ComInfor_Address2">351/9 Nơ Trang Long, Phường Bình Lợi Trung, Tp.Hồ Chí Minh</string>
    <string name="ComInfor_TaxCode">MST: 0312055283</string>
    <string name="ComInfor_TaxCode2">0312055283</string>
    <string name="ComInfor_Tel">ĐT: 02822412141 - 02822412142</string>
    <string name="ComInfor_Tel2">02822412141 - 02822412142</string>
    <string name="ComInfor_Website">Website: https://www.viettassaigon.vn</string>
    <string name="ComInfor_Website2">https://www.viettassaigon.vn</string>
    <string name="ComInfor_Email">Email: hotro@viettassaigon.vn</string>
    <string name="ComInfor_Email2">hotro@viettassaigon.vn</string>
    <string name="ComInfor_LogoDesc">Logo Viettas</string>
    <string name="ComInfor_AppLogoDesc">Logo ứng dụng</string>
    <string name="ComInfor_GoogleLogoDesc">Logo Google</string>
    <string name="Biometric_Title">Xác thực sinh trắc học cho %s</string>
    <string name="Biometric_Caption_Cancel">Hủy bỏ</string>
    <string name="Biometric_Message_Failed">Thử lại</string>
    <string name="Message_Com_Title">Thông báo</string>
    <string name="Message_Com_Title_Confirm">Xác nhận</string>
    <string name="Message_Valid_Title">Kiểm tra dữ liệu</string>
    <string name="Message_Caption_ButtonOK">Đồng ý</string>
    <string name="Message_Caption_ButtonYes">Có</string>
    <string name="Message_Caption_ButtonNo">Không</string>
    <string name="Message_Caption_ButtonCancel">Bỏ qua</string>
    <string name="Message_Caption_LongClickToPick">Nhấn giữ lâu để sửa</string>
    <string name="Message_Caption_ClickToPick">Chọn</string>
    <string name="Message_Caption_ClickToUnPick">Bỏ chọn</string>
    <string name="Message_Caption_UnDo">Hoàn tác</string>
    <string name="Message_Caption_Privacy">Chính sách bảo mật</string>
    <string name="Message_Caption_Term">Điều khoản sử dụng</string>
    <string name="Com_Title_ChonNgay">Chọn ngày</string>
    <string name="Com_Title_ChonTuan">Chọn tuần</string>
    <string name="Com_Title_ChonThang">Chọn tháng</string>
    <string name="Com_Title_ChonNam">Chọn năm</string>
    <string name="Com_Title_ChonNgayGio">Chọn thời gian</string>
    <string name="Button_DoItList">Nhấn giữ để quét</string>
    <string name="Button_TonKho">Tồn kho</string>
    <string name="Button_NXT">Nhập-Xuất-Tồn</string>
    <string name="Button_Kill_spid">Ngắt phiên</string>
    <string name="Button_View">Xem</string>
    <string name="Button_Add">Thêm</string>
    <string name="Button_Del">Xóa</string>
    <string name="Button_DelItems">Xóa (%s)</string>
    <string name="Button_Edit">Sửa</string>
    <string name="Button_DelAll">Xóa hết</string>
    <string name="Button_Close">Đóng</string>
    <string name="Button_Save">Lưu</string>
    <string name="Button_ScanImage">Quét ảnh</string>
    <string name="Button_Crop">Cắt ảnh</string>
    <string name="Button_Locked">Khóa</string>
    <string name="Button_LockedItems">Khóa (%s)</string>
    <string name="Button_UnLocked">Gỡ khóa</string>
    <string name="Button_UnLockedItems">Gỡ khóa (%s)</string>
    <string name="NoPicture">Chưa có ảnh</string>
    <string name="Button_PickedImage">Chọn ảnh</string>
    <string name="Button_Picked">Chọn</string>
    <string name="Button_PickedItems">Chọn (%s)</string>
    <string name="Button_UnPicked">Bỏ chọn</string>
    <string name="Button_UnPickedItems">Bỏ chọn (%s)</string>
    <string name="Button_Share">Chia sẻ</string>
    <string name="Button_Search">Tìm kiếm dữ liệu</string>
    <string name="Button_ToTop">Lên đầu trang</string>
    <string name="Button_ToBot">Xuống cuối trang</string>
    <string name="Button_MoreActions">Trình đơn ngữ cảnh</string>
    <string name="Button_BarcodeScan">Quét mã vạch</string>
    <string name="Button_ChonMaHang">Chọn mã hàng</string>
    <string name="Button_Confirm">Xác nhận</string>
    <string name="Button_Cancel">Hủy bỏ</string>
    <string name="Button_GetBill">Nhận phiếu</string>
    <string name="Button_Inquiry">Truy vấn</string>
    <string name="Button_CheckBarcodeType">Mã</string>
    <string name="Button_Done">Xong</string>
    <string name="Button_Hide">Ẩn</string>
    <string name="Button_Today">Hôm nay</string>
    <string name="Button_CancelEdit">Hủy bỏ thay đổi</string>
    <string name="Com_Caption_TuNgay">Từ ngày</string>
    <string name="Com_Caption_DenNgay">Đến ngày</string>
    <string name="Com_Caption_HomTruoc">Hôm qua</string>
    <string name="Com_Caption_TuanTruoc">Tuần trước</string>
    <string name="Com_Caption_ThangTruoc">Tháng trước</string>
    <string name="Com_Caption_NamTruoc">Năm trước</string>
    <string name="Com_Caption_HomNay">Hôm nay</string>
    <string name="Com_Caption_TuanNay">Tuần này</string>
    <string name="Com_Caption_ThangNay">Tháng này</string>
    <string name="Com_Caption_NamNay">Năm nay</string>
    <string name="Com_Caption_Cong">Cộng</string>
    <string name="Com_Caption_CongNotSum">\?</string>
    <string name="Com_Caption_CongItem">Tổng cộng %s</string>
    <string name="Com_Caption_CacNhomConLai">Các nhóm còn lại</string>
    <string name="Com_Caption_DangXuat">Đăng xuất</string>
    <string name="Com_Caption_Search">Nhập nội dung để tìm</string>
    <string name="Com_Caption_ClearSearch">Xóa nội dung tìm</string>
    <string name="Com_Caption_DoSearch">Tìm</string>
    <string name="Com_Caption_Lookup">Nhập để lọc hàng hóa</string>
    <string name="Com_Caption_IsPicked">Chọn</string>
    <string name="Com_Caption_NotAvaliable">Khóa</string>
    <string name="Com_Caption_STT">#</string>
    <string name="Com_Caption_HaiCham">:</string>
    <string name="Com_Caption_ListItem">Danh sách dữ liệu</string>
    <string name="Com_Caption_LimitCount">(Tối đa %s)</string>
    <string name="Com_Caption_Today">Hôm nay</string>
    <string name="Com_Caption_XemNoiDung">Xem nội dung</string>
    <string name="Com_Caption_CongPhieu">Tổng cộng %s phiếu</string>
    <string name="Com_Caption_CongTrongLuong">Tổng cộng %s Kg</string>
    <string name="Com_Caption_PhotoPicker">Chọn ảnh</string>
    <string name="Com_Caption_PhotoFromCamera">Chụp ảnh mới</string>
    <string name="Com_Caption_PhotoFromGallery">Chọn từ bộ sưu tập</string>
    <string name="Com_Caption_PhotoCropper">Cắt ảnh</string>
    <string name="Com_Caption_Thang">Tháng</string>
    <string name="BaseData_Caption_CongAdv">Tổng cộng</string>
    <string name="BaseData_Caption_KhoHang">Kho hàng</string>
    <string name="BaseData_Caption_HangHoa">Hàng hóa</string>
    <string name="Com_Message_KhongCoDuLieu">Không có dữ liệu</string>
    <string name="Com_Message_KhongCoDuLieu_WithContent">Không tìm thấy dữ liệu với nội dung [%s]</string>
    <string name="Com_Message_ChuaCoDuLieu">Chưa có dữ liệu</string>
    <string name="Com_Message_DangNapDuLieu">Đang nạp dữ liệu …</string>
    <string name="Com_Message_DangXuLy">Đang xử lý …</string>
    <string name="Com_Message_ChoGiayLat">Vui lòng chờ trong giây lát</string>
    <string name="Com_Message_NoNetwork">Kết nối Internet không khả dụng</string>
    <string name="Com_Message_Loi">Lỗi: </string>
    <string name="Com_Message_Loi_KhongCoQuyen">Tài khoản của bạn không có quyền xem dữ liệu nào!\nVui lòng liên hệ Quản trị viên.</string>
    <string name="Com_Message_Loi_AppUpdateFailed">Tạm thời không thể truy xuất thông tin cập nhật từ máy chủ cập nhật</string>
    <string name="Com_Message_LoiDangNhapGoogle">Không thể đăng nhập tài khoản Google vào lúc này.\nBắt buộc đăng nhập tài khoản Google trước khi sử dụng.</string>
    <string name="Com_Message_AskForPermissions">Cấp quyền truy xuất máy ảnh và nội dung nghe nhìn để chụp, gửi, lưu ảnh phiếu cấn.</string>
    <string name="Com_Message_SaiMatKhauBaoVe">Mật khẩu bảo vệ không chính xác</string>
    <string name="Com_Message_NoNewVersion">Phiên bản hiện tại đã là phiên bản mới nhất.</string>
    <string name="Com_Message_ClickBackAgainToExit">Nhấn Back lần nữa để thoát.</string>
    <string name="Com_Message_TokenExpired">Phiên đăng nhập hết hạn.</string>
    <string name="Com_Message_XacNhanThoat">Có thật sự muốn thoát khỏi ứng dụng không?</string>
    <string name="Com_Message_LoiTuChoiDangNhapGoogle">Bạn cần đăng nhập tài khoản Google để xác thực danh tính.\nBắt buộc đăng nhập tài khoản Google trước khi sử dụng.</string>
    <string name="Com_Message_XacNhan_DangXuat_Google">Bạn có thực sự muốn đăng xuất khỏi tài khoản Google hiện hành không?</string>
    <string name="Com_Message_XacNhan_DangXuat">Bạn có thực sự muốn đăng xuất khỏi tài khoản hiện hành không?</string>
    <string name="Com_Message_AppNeedUpdate">Ứng dụng cần phải được cập nhật phiên bản mới trước khi sử dụng.</string>
    <string name="Com_Message_AppHasUpdate">Ứng dụng đã có phiên bản cập nhật mới.\nBạn có muốn tải xuống bản cập nhật mới ngay bây giờ không?</string>
    <string name="Com_Message_AppUpdateDownloading">Đang tải bản cập nhật mới…</string>
    <string name="Com_Message_AppUpdateDownloadFinish">Đã tải xong bản cập nhật mới.</string>
    <string name="Com_Message_AskForAccessPermission">Yêu cầu cung cấp quyền truy cập%s …</string>
    <string name="Com_Message_AskForAccessPermission_OK">Yêu cầu cung cấp quyền truy cập hoàn tất</string>
    <string name="Com_Message_AskForAccessPermission_Failed">Yêu cầu cung cấp quyền truy cập thất bại.</string>
    <string name="Com_Message_Logging">Đăng nhập hệ thống%s …</string>
    <string name="Com_Message_Login_OK">Đăng nhập hệ thống hoàn tất.</string>
    <string name="Com_Message_Login_Failed">Đăng nhập hệ thống thất bại.</string>
    <string name="Com_Message_CheckDataNotEmpty">Không được để trống.</string>
    <string name="Com_Message_CheckDataNotOK">Không hợp lệ.</string>
    <string name="Com_Message_GoogleLogging">Xác thực tài khoản Google%s …</string>
    <string name="Com_Message_PasscodeChangeOK">Mật khẩu bảo vệ đã được thay đổi thành công.</string>
    <string name="Com_Message_PasscodeCreateOK">Mật khẩu bảo vệ đã được gán thành công.</string>
    <string name="Com_Message_PasscodeDeleteOK">Mật khẩu bảo vệ đã được loại bỏ thành công.</string>
    <string name="Com_Message_InsertDataOK">%s đã được thêm vào dữ liệu.</string>
    <string name="Com_Message_DeleteDataOK">%s đã được xóa khỏi dữ liệu.</string>
    <string name="ActPasscode_Title">Ứng dụng đã được bảo vệ</string>
    <string name="ActPasscode_TextEdit_Password_Hint">Mật khẩu</string>
    <string name="ActPasscode_TextEdit_Password_Helper">Nhập mật khẩu để mở khóa</string>
    <string name="ActPasscode_Button_Confirm">Xác nhận</string>
    <string name="ActPasscode_TextView_OpenFingerLogin">Sử dụng vân tay</string>
    <string name="ActAbout_AppDescription">Công cụ Kiểm soát nội bộ giành riêng cho công nhân viên đang làm việc tại doanh nghiệp, bản quyền thuộc về Công Ty Cổ Phần Giải Pháp Thương Mại Việt Nam Sài Gòn</string>
    <string name="ActAbout_AppBaoLuuQuyen">Công Ty Cổ Phần Giải Pháp Thương Mại Việt Nam Sài Gòn bảo lưu mọi quyền.</string>
    <string name="ActAbout_TextView_AppVersion">Phiên bản ứng dụng:</string>
    <string name="ActAbout_TextView_DiaChi">Địa chỉ:</string>
    <string name="ActAbout_TextView_MaSoThue">MST:</string>
    <string name="ActAbout_TextView_DienThoai">Điện thoại:</string>
    <string name="ActAbout_TextView_Website">Website:</string>
    <string name="ActAbout_TextView_Email">Email:</string>
    <string name="ActAbout_TextView_Terms">Điều khoản sử dụng:</string>
    <string name="ActAbout_TextView_Privacy">Chính sách bảo mật:</string>
</resources>