<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/ActPassCode_MaterialToolbar"
            style="@style/AppToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:subtitle="@string/ActPasscode_Title"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center|top"
            android:orientation="vertical"
            android:padding="@dimen/Com_TribblePadding">

            <ImageView
                android:layout_width="@dimen/Com_AppLogoSize"
                android:layout_height="@dimen/Com_AppLogoSize"
                android:contentDescription="@string/ComInfor_AppLogoDesc"
                android:src="@drawable/logo_app" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Com_TribblePadding"
                app:cardCornerRadius="@dimen/Com_FourPadding"
                app:cardElevation="@dimen/Com_Padding">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/ActPassCode_LinearLayout_Data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/Com_TribblePadding"
                        android:paddingTop="@dimen/Com_TribblePadding"
                        android:paddingEnd="@dimen/Com_TribblePadding"
                        android:visibility="invisible">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ActPassCode_TextInputLayout_Password"
                            style="@style/AppTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/Com_TribblePadding"
                            android:hint="@string/ActPasscode_TextEdit_Password_Hint"
                            app:endIconMode="password_toggle"
                            app:helperText="@string/ActPasscode_TextEdit_Password_Helper"
                            app:startIconDrawable="@drawable/icon_lock">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ActPassCode_TextInputEditText_Password"
                                style="@style/AppTextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberPassword"
                                android:maxLength="6" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/Com_TribblePadding"
                            android:orientation="vertical">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/ActPassCode_MaterialButton_Confirm"
                                style="@style/AppButonCommands"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/Com_TribblePadding"
                                android:minHeight="@dimen/Com_TouchMinHeightMed"
                                android:text="@string/ActPasscode_Button_Confirm" />

                            <LinearLayout
                                android:id="@+id/ActPassCode_LinearLayout_UnlockFinger"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:minHeight="@dimen/Com_TouchMinHeight"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:layout_width="@dimen/Com_TouchMinHeightMed"
                                    android:layout_height="@dimen/Com_TouchMinHeightMed"
                                    android:contentDescription="@string/ActPasscode_TextView_OpenFingerLogin"
                                    android:src="?android:attr/fingerprintAuthDrawable"
                                    app:tint="@color/md_theme_primary" />

                                <com.google.android.material.textview.MaterialTextView
                                    style="@style/GroupTextViewLight"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/ActPasscode_TextView_OpenFingerLogin"
                                    android:textStyle="italic" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <include layout="@layout/inclay_base_waiting" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/inclay_base_footer" />

</LinearLayout>